fixed contact page at desktop view where footer was cutting off content

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -156,6 +156,9 @@ body {
   height: 100%;
   position: relative;
 }
+.contact-page-body {
+  background: #C61632;
+}
 .container-home,
 .container-about,
 .container-reviews,
@@ -323,7 +326,7 @@ body {
   padding: 50px;
   background: #C61632;
   color: #fff;
-  height: 100vh;
+  height: 100%;
 }
 @media (max-width: 800px) {
   .contact {
@@ -334,7 +337,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 100px;
 }
 @media (max-width: 1100px) {
   .contact .contact-container {
