--- a/LESS/contact-page.less
+++ b/LESS/contact-page.less
@@ -3,8 +3,8 @@
     padding: 50px;
     background: @contact-form;
     color: @main-font;
+    height: 100%;
 
-    height: 100vh;
 
     @media @tablet {
         height: auto;
@@ -13,7 +13,7 @@
     .contact-container {
         .flex(column);
         align-items: center;
-        padding-top: 100px;
+        
 
         @media @desktop {
             padding-top: 0;
