--- a/LESS/global.less
+++ b/LESS/global.less
@@ -36,6 +36,10 @@
       position: relative;
   }
 
+  .contact-page-body {
+    background: @nba-red;
+  }
+
 .container-home, .container-about, .container-reviews, .container-contact {
     min-height: 100vh;
     overflow: hidden;
